 * Miscellaneous and bugfixes
   * 1.2 savegames are no longer compatible and thus not loaded
   * fixed a crash if an invalid scenario was loaded (bug #9049)
   * fixed bug 8522.  Units without a name will be named after the unit_type.
   * fixed bug #9103 (AI causes crash when using static units like towers)
   * fixed a crash if a units poison attack has a cth of 0 (bug #9020)

Version 1.3.2:
 * campaigns
   * Heir to the Throne
     * In Home of the North Elves, Eonihar the rider will join you permanently
       and the other riders that find you will be controlled by the AI
     * updated images for Delfador
     * made the narrator talk about gryphons at the end of Northern Winter only
       if the player has actually gotten the eggs
   * Tutorial
     * merged all unit images used in the tutorial from httt
     * increased number of turns from 20 to 26 in the 2nd scenario
   * made some units not appear in the unit help anymore (invisible helper
     units, duplicate desert elves and such)
   * The South Guard
     * better placement and duration of story images
     * graphical enhancements including a new ethiliel portrait
     * added 'Ruffian' an L0 outlaw to give the player something easy to kill.
   * Under the Burning Suns
     * Scenario 3: Made orc ambush happen on a random turn
   * Northern Rebirth
     * Version 18.6 merged in from WesCamp.
 * graphics
   * added the --max-fps command line switch
   * changed the drawing logic so it no longer delays when the drawing is
     lagging
   * improved the look of the main menu and tips of the day boxes in the title
     screen
   * bugfix: units will now fade out properly at the end of death animations
   * rewrote the halo render engine which solves a few minor glitches but
     most importantly speeds up the drawing of the halos.
   * units are scaled properly when zooming also with tiny gui (bug #8703 and
     bug #6570)