@@ -50,7 +50,8 @@ Version 1.3.2+svn:
     * Savegames from Wesnoth 1.2.x are no longer compatible and thus cannot be
       loaded.
     * Fixed a crash when an invalid scenario was loaded (bug #9049).
-
+    * Fixed a bug which allowed undo after a recruit of a traitless unit
+	  revealed fogged or shrouded map areas.
 
 Version 1.3.2:
   * Campaigns
