@@ -92,6 +92,8 @@ Version 1.3.2+svn:
    * fixed bug 8522.  Units without a name will be named after the unit_type.
    * fixed bug #9103 (AI causes crash when using static units like towers)
    * fixed a crash if a units poison attack has a cth of 0 (bug #9020)
+   * no longer allow undo if a traitless unit reveals fogged and/or shrouded 
+     terrain (bug #9171, patch #739)
 
 Version 1.3.2:
  * campaigns
